log
Wed 03 May 2023 06:00:33 PM UTC: 
 tests:  0|5
total_score: 0/70
ae82556
Wed 03 May 2023 06:23:37 PM UTC: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:63:36: error: expected ‘;’ before ‘:’ token
   63 |               pushBack(list, nuevo):
      |                                    ^
      |                                    ;
Compilation failed
293d7ef
Wed 03 May 2023 06:23:44 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8dc9aff
Wed 03 May 2023 06:24:26 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
d7c389d
Wed 03 May 2023 06:33:11 PM UTC: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:58:13: error: unused variable ‘k’ [-Werror=unused-variable]
   58 |         int k=3*(i%3) + (j%3) ;
      |             ^
sudoku.c:57:13: error: unused variable ‘p’ [-Werror=unused-variable]
   57 |         int p=3*(i/3) + (j/3) ;
      |             ^
cc1: all warnings being treated as errors
Compilation failed
4dd7393
Wed 03 May 2023 06:33:20 PM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
6dd0cb8
Wed 03 May 2023 06:44:37 PM UTC: 
 sudoku.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:61:14: error: unused variable ‘m’ [-Werror=unused-variable]
   61 |          int m=3*(k%3) + (p%3) ;
      |              ^
sudoku.c:60:14: error: unused variable ‘l’ [-Werror=unused-variable]
   60 |          int l=3*(k/3) + (p/3) ;
      |              ^
cc1: all warnings being treated as errors
Compilation failed
9b518df
